# AC6_saving_manager

./: ACVIEmblemCreator_实现机制分析.md  LICENSE  README.md  png_chunk_steg.py  restore_hidden_png_parts.ps1
.github/workflows/: release-windows.yml  windows-ci.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  (+114 more)
ACVIEmblemCreator/: imgui.ini  launch_emblem_creator.cmd  readme.md
artifacts/: README.md
docs/: ac6-data-manager.m1_5-windows-exe-live-acceptance.prd.md  ac6-data-manager.m1_5-windows-exe-live-acceptance.technical-design.md  ac6-data-manager.native-cpp.n2-asset-library-exchange.prd.md  ac6-data-manager.native-cpp.n2-asset-library-exchange.technical-design.md  ac6-data-manager.native-cpp.prd.md  ac6-data-manager.native-cpp.technical-design.md  ac6-data-manager.prd.md  ac6-data-manager.technical-design.md
native/: CMakeLists.txt  README.md
native/app/: CMakeLists.txt  app_services.cpp  app_services.hpp  file_dialog_utils.cpp  file_dialog_utils.hpp  home_library_view.cpp  home_library_view.hpp  import_wizard_dialog.cpp  import_wizard_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  native_exchange_workflow.cpp  native_exchange_workflow.hpp  native_save_workflow.cpp  native_save_workflow.hpp  product_gui_application.cpp  product_gui_application.hpp  save_result_dialog.cpp  save_result_dialog.hpp  target_slot_dialog.cpp  target_slot_dialog.hpp  ui_resources.qrc
native/cmake/: Ac6dmInstall.cmake  Ac6dmOptions.cmake  Ac6dmSources.cmake
native/config/sidecar/: ThirdPartyManifest.cpp  ThirdPartyManifest.hpp
native/core/ac/: ac_catalog.cpp  ac_catalog.hpp  ac_preview_probe_service.cpp  ac_preview_probe_service.hpp  ac_preview_support.cpp  ac_preview_support.hpp  ac_regulation_catalog.cpp  ac_regulation_catalog.hpp  ac_runtime_regulation.cpp  ac_runtime_regulation.hpp
native/core/emblem/: emblem_domain.cpp  emblem_domain.hpp  emblem_preview_service.cpp  emblem_preview_service.hpp
native/core/exchange/: exchange_contracts.cpp  exchange_contracts.hpp  package_codec.cpp  package_codec.hpp
native/core/preview/: preview_models.cpp  preview_models.hpp
native/core/tool_adapter/: WitchyBndProcessAdapter.cpp  WitchyBndProcessAdapter.hpp
native/core/workspace/: SessionWorkspace.cpp  SessionWorkspace.hpp
native/include/ac6dm/contracts/: asset_catalog.hpp  common_types.hpp  emblem_workflow.hpp  error_contracts.hpp  evidence_contracts.hpp  exchange_contracts.hpp  service_interfaces.hpp  slot_contracts.hpp
native/platform/windows/process/: ProcessRunner.cpp  ProcessRunner.hpp
native/resources/advanced_garage/data/: PartsData.json  ac_preview_lookup.json  regulation_preset_catalog.json
native/resources/advanced_garage/images/ui/: dot_grid.xpm
native/resources/ui/: ac6dm_dark.qss
native/tests/: CMakeLists.txt  README.md  ac_catalog_contract_test.cpp  ac_preview_probe_test.cpp  ac_preview_support_test.cpp  ac_regulation_catalog_test.cpp  ac_runtime_regulation_test.cpp  contracts_smoke_test.cpp  emblem_catalog_contract_test.cpp  emblem_preview_service_test.cpp  exchange_package_codec_test.cpp  exchange_service_workflow_test.cpp  import_constraints_contract_test.cpp  manifest_gate_contract_test.cpp  preview_contract_test.cpp  qualification_suite_plan.md  staging_policy_contract_test.cpp
native/tests/ui/: home_library_view_test.cpp  target_slot_dialog_test.cpp
packaging/: pyinstaller.spec
scripts/: build_native_windows.ps1  build_native_windows.sh  build_windows_portable.ps1  build_windows_portable.py  create_release_zip.py  live_acceptance_capture.ps1  package_native_windows.ps1  package_native_windows.sh  prepare_live_acceptance_capture.py  record_live_acceptance_evidence.py  run_preflight_check.py  smoke_test_portable.ps1  verify_third_party_manifest.py  write_smoke_report.py
tests/: test_container_workspace.py  test_emblem_binary.py  test_emblem_import.py  test_emblem_package.py  test_emblem_preview.py  test_golden_corpus.py  test_gui_models.py  test_gui_windows.py  test_release_build.py  test_release_evidence.py  test_release_preflight.py  test_release_publish.py  test_release_runtime.py  test_release_third_party.py  test_validation_audit.py  test_validation_baseline.py  test_validation_corpus.py  test_validation_readiness.py  test_validation_rollback.py
(+524 files in other folders)
